# FastAPI_Trading_app

./: .env_example  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
docker/: app.sh  celery.sh
migrations/: env.py
migrations/versions/: e2374d5f098d_initial.py  fcb1c3a01e6d_add_message.py
src/: config.py  database.py  main.py
src/auth/: base_config.py  manager.py  models.py  schemas.py  utils.py
src/chat/: models.py  router.py  ws.connect.py
src/operations/: models.py  router.py  schemas.py
src/pages/: router.py
src/tasks/: router.py
src/templates/: base.html  chat.html  search.html
tests/: conftest.py  test_auth.py  test_operations.py
